--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,5 +2,15 @@
 
 {% import 'macros.html' as macro%}
 
+<!-- Styles block -->
+
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+
+
+<!-- Content Block-->
 {% block content %}
+
 {% endblock content %}
