pre final changes

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,16 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% import 'macros.html' as macro%} {% block content %}
 
-{% import 'macros.html' as macro%}
+    <div class="container">
+      <div class="row">
+        
+          <h1>About IMEALS</h1>
+          <p>
+              Here at IMEALS we aim to provide the best services when it comes to food catering and user services.
+          </p>
+        
+         
+        </div>
+      </div>
 
-{% block content %}
-
-{% endblock content %}
+  {% endblock content %}
+</div>
