--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,4 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
 
-font-family: 'Architects Daughter', cursive;
-font-family: 'Courgette', cursive;
+* {
+    font-family: 'Architects Daughter', cursive;
+    font-size: 26px;
+}
+
+.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+    vertical-align: top;
+    text-align: center;
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+    background-image: url('https://images.unsplash.com/photo-1516919549054-e08258825f80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80');
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    overflow-y: scroll;
+}
