--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,57 @@
-{% extends 'base.html' %}
-
-{% import 'macros.html' as macro%}
+{% extends 'base.html' %} {% import 'macros.html' as macro%}
 
 <!-- Styles block -->
 
-{% block styles%}
-    {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% block styles%} {{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}" />
 {% endblock %}
-
 
 <!-- Content Block-->
 {% block content %}
+<div class="bgimage">
+  <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
+    <div class="col-md-12 p-lg-5 mx-auto my-5">
+      <h2 class="display-4 font-weight-normal text-white">WELCOME TO IMEALS</h2>
+      <!-- Carousel trial
+          <div
+        id="carouselExampleSlidesOnly"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100"
+              src="https://images.unsplash.com/photo-1486428128344-5413e434ad35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+              alt="First slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="https://images.unsplash.com/photo-1521913626209-0fbf68f4c4b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+              alt="Second slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="https://images.unsplash.com/photo-1518691340140-512e66ce957b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=746&q=80"
+              alt="Third slide"
+            />
+          </div>
+        </div>
+      </div> <!-->
+      <div id="buttons d-block mx-auto">
+        <a class="btn btn-outline-secondary text-white" href="/menu"
+          >View Menu</a
+        >&nbsp;&nbsp;
 
-{% endblock content %}
+        <a class="btn btn-outline-secondary text-white" href="/about"
+          >About us</a
+        >
+      </div>
+      {% endblock content %}
+    </div>
+  </div>
+</div>
