Afew changes and adds

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% import 'macros.html' as macro%}
+{% extends 'base.html' %} 
+{% import 'macros.html' as macro%}
 
 <!-- Styles block -->
 
@@ -51,7 +52,7 @@
           >About us</a
         >
       </div>
-      {% endblock content %}
     </div>
   </div>
 </div>
+{% endblock content %}
