--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% import 'macros.html' as macro%} {% block content %}
+{% extends 'base.html' %}
+ {% import 'macros.html' as macro%} 
+ {% block content %}
 
     <div class="container">
       <div class="row">
@@ -11,6 +13,5 @@
          
         </div>
       </div>
-
-  {% endblock content %}
 </div>
+{% endblock content %}
