--- a/app/templates/admin/admin-base.html
+++ b/app/templates/admin/admin-base.html
@@ -1,3 +1,5 @@
 {% extends 'base.html' %}
-% block sidebar %} {% include 'sidebar.html' %} {% endblock %}
+% block sidebar %}
+ {% include 'sidebar.html' %}
+  {% endblock %}
 {% block content%}{% endblock%}
