--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -3,5 +3,297 @@
 {% import 'macros.html' as macro%}
 
 {% block content %}
+<!-- Menu section -->
+<section class="menu-section spad set-bg" data-setbg="{{url_for('static', filename='photos/menu-bg.jpg')}}">
+    <div class="container">
+        <div class="section-title text-white">
+            <i class="flaticon-022-tray"></i>
+            <h2>Our Menus</h2>
+        </div>
+        <!-- menu tab nav -->
+        <ul class="menu-tab-nav nav nav-tabs" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">Breakfast</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false">Brunch</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">Lunch</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#tab-4" role="tab" aria-controls="tab-4" aria-selected="false">Dinner</a>
+            </li>
+        </ul>
+        <div class="tab-content menu-tab-content">
+            <!-- single tab content -->
+            <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="tab-1">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs with ham</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$9.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$11.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Eggs Benedict</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$6.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Soft-Boiled Organic Egg</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$8.00</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs with ham</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$9.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$11.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Eggs Benedict</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$6.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Soft-Boiled Organic Egg</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$8.00</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- single tab content -->
+            <div class="tab-pane fade" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs with ham</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$9.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$11.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Eggs Benedict</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$6.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Soft-Boiled Organic Egg</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$8.00</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs with ham</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$9.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$11.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Eggs Benedict</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$6.00</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- single tab content -->
+            <div class="tab-pane fade" id="tab-3" role="tabpanel" aria-labelledby="tab-3">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs with ham</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$9.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$11.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Eggs Benedict</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$6.00</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs with ham</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$9.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$11.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Eggs Benedict</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$6.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Soft-Boiled Organic Egg</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$8.00</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- single tab content -->
+            <div class="tab-pane fade" id="tab-4" role="tabpanel" aria-labelledby="tab-4">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs with ham</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$9.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$11.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Eggs Benedict</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$6.00</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs with ham</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$9.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$11.00</div>
+                            </div>
+                        </div>
+                        <!-- menu item -->
+                        <div class="menu-item">
+                            <h5>Eggs Benedict</h5>
+                            <div class="mi-meta">
+                                <p>with wild mushrooms and asparagus</p>
+                                <div class="menu-price">$6.00</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="text-center pt-5">
+            <a href="#" class="site-btn">Order Now</a>
+        </div>
+    </div>
+</section>
+<!-- Menu section end -->
+
+
 
 {% endblock %}
