--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -35,15 +35,15 @@
                             <h5>Scrambled Eggs with ham</h5>
                             <div class="mi-meta">
                                 <p>with wild mushrooms and asparagus</p>
-                                <div class="menu-price">$9.00</div>
+                                <div class="menu-price">Ksh900</div>
                             </div>
                         </div>
                         <!-- menu item -->
                         <div class="menu-item">
-                            <h5>Scrambled Eggs in Puff Pastry</h5>
+                            <h5>Chocolate chip cookies</h5>
                             <div class="mi-meta">
-                                <p>with wild mushrooms and asparagus</p>
-                                <div class="menu-price">$11.00</div>
+                                <p>with almond butter & Milk Shake</p>
+                                <div class="menu-price">Kshs110</div>
                             </div>
                         </div>
                         <!-- menu item -->
@@ -51,7 +51,7 @@
                             <h5>Eggs Benedict</h5>
                             <div class="mi-meta">
                                 <p>with wild mushrooms and asparagus</p>
-                                <div class="menu-price">$6.00</div>
+                                <div class="menu-price">Ksh80</div>
                             </div>
                         </div>
                         <!-- menu item -->
