add a working application

--- a/app/templates/admin/admin-base.html
+++ b/app/templates/admin/admin-base.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-% block sidebar %}
+{}% block sidebar %}
  {% include 'sidebar.html' %}
   {% endblock %}
-{% block content%}{% endblock%}
+{% block content%}
+{% endblock%}
