--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,3 @@
-  
-{% extends 'base.html' %}
 
 {% import 'macros.html' as macro%}
 
@@ -10,10 +8,10 @@
             <div class="header_bottom_border">
                 <div class="row align-items-center no-gutters">
                 <div class="navbar navbar-inverse" role="navigation">
-    
+
                  <a class="navbar-brand" href="/"><b> IMEALS </b></a>
                 </div>
-       
+
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/">Menu</a></li>
@@ -31,6 +29,4 @@
           </div>
       </div>
   </div>
-{% endblock content %}
-
-
+{% endblock %}
