--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,13 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% import 'macros.html' as macro%}
 
-<!-- Styles block -->
+<!-- Styles block
 
 {% block styles%} {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}" />
 {% endblock %}
+
+-->
 
 <!-- Content Block-->
 {% block content %}
@@ -55,4 +57,4 @@
     </div>
   </div>
 </div>
-{% endblock content %}
+{% endblock %}
