--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,8 +1,8 @@
-% extends 'base.html'%}
+{% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<div class="container"> 
+<div class="container">
     <div class="row">
       <div class= "col-md-2"> </div>
       <div class="col-md-8">
