add menu plus styling

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,5 +1,5 @@
 .branding {
-    background-image: url("photos/background.png");
+    background-image: url("/static/photos/background.png");
     padding-top: 30px;
     min-height: 70px;
     border-bottom: #C67417 3px solid;
