--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -40,7 +40,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>2 fried eggs and bacon </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>tea with whole milk</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 2.00</span> </p>
@@ -58,7 +58,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Scotched eggs,french toast and sausages </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>coffee with whole milk</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 3.00</span> </p>
@@ -76,7 +76,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Two sausages,bacon and toast </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>hot choclate with whole milk</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 5.00</span> </p>
@@ -101,7 +101,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>wet fried fish </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>ugali</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 15.00</span> </p>
@@ -118,7 +118,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>grilled chops </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>a side plate </b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 12.00</span> </p>
@@ -136,7 +136,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Chicken Drumsticks </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>plain rice</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 22.00</span> </p>
@@ -160,7 +160,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>french fries </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>two sausages and barley</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 10.00</span> </p>
@@ -178,7 +178,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Wet fried pork with thick paste  </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>ugali</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 15.00</span> </p>
@@ -196,7 +196,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/photos/meal.png" class="meal" alt="Image">
+                                <img src="/staticphotos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Game meat </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>local desert</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 13.00</span> </p>
