Done with admin dashboard

--- a/app/templates/admin/admin-base.html
+++ b/app/templates/admin/admin-base.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
-{}% block sidebar %}
- {% include 'sidebar.html' %}
+
+  {% block sidebar%}
+  {% include 'admin/sidebar.html' %}
   {% endblock %}
-{% block content%}
-{% endblock%}
+
+  {% block content%}
+  
+  {% endblock%}
+  
+
+
+
+
+
