--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -196,7 +196,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/staticphotos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/meal.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Game meat </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>local desert</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 13.00</span> </p>
