alterations for db

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,8 +1,4 @@
-{% extends 'base.html'%}
-{% import 'bootstrap/wtf.html' as wtf%}
-{% import 'macros.html' as macro%}
-
-{% block content %}
+{% extends 'base.html'%} {% import 'bootstrap/wtf.html' as wtf%} {% import 'macros.html' as macro%} {% block content %}
 <!-- Menu section -->
 <section class="menu-section spad set-bg" data-setbg="{{url_for('static', filename='photos/menu-bg.jpg')}}">
     <div class="container">
