--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,7 +5,7 @@
         
           <h1>About IMEALS</h1>
           <p>
-              Here at IMEALS we aim to provide the best services when it comes to food catering and user services.
+              Here at IMEALS we aim to provide the best services when it comes to food catering and user services
           </p>
         
          
