--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,14 +1,23 @@
+<a class="navbar-brand" href="/">
+    <img
+      alt="My Blog"
+      src="https://icon2.kisspng.com/20171221/vde/halloween-witch-silhouette-png-clip-art-5a3b80347d8057.8929602415138488845141.jpg"
+      width="30"
+      height="30"
+      class="d-inline-block align-top"
+    />
+  </a>
 <div class="header-area ">
     <div id="sticky-header" class="main-header-area">
         <div class="container-fluid p-0">
             <div class="header_bottom_border">
-                <div class="row align-items-center no-gutters">
-<div class="navbar navbar-inverse" role="navigation">
-    
-            <a class="navbar-brand" href="/"><b> IMEALS </b></a>
+                <div class="row align-items-center no-gutters text-right">
+        
+        <div class="navbar navbar-inverse" role="navigation">
+        <a class="navbar-brand" href="/"><b> IMEALS </b></a>
         </div>
        
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav font-weight-bold text-uppercase">
                 <li><a href="/">Home</a></li>
                 <li><a href="/">Menu</a></li>
                 <li><a href="/">Contact</a></li>
