--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,8 @@
   <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
     <div class="col-md-12 p-lg-5 mx-auto my-5">
       <h2 class="display-4 font-weight-normal text-white">WELCOME TO IMEALS</h2>
-      <!-- Carousel trial
-          <div
+
+      <div
         id="carouselExampleSlidesOnly"
         class="carousel slide"
         data-ride="carousel"
@@ -41,7 +41,7 @@
             />
           </div>
         </div>
-      </div> <!-->
+      </div>
       <div id="buttons d-block mx-auto">
         <a class="btn btn-outline-secondary text-white" href="/menu"
           >View Menu</a
