--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -14,8 +14,8 @@
 
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
-                <li><a href="/">Menu</a></li>
-                <li><a href="/">Contact</a></li>
+                <li><a href="/menu.html">Menu</a></li>
+                <li><a href="/">About</a></li>
               <ul class="nav navbar-nav navbar-right">
              {% if current_user.is_authenticated %}
              <li style="color:white;padding:15px;">{{current_user.username}}</li>
