--- a/app/templates/admin/menu.html
+++ b/app/templates/admin/menu.html
@@ -4,6 +4,7 @@
 
 {% block styles%} {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/admin/menu.css')}}" />
-{% endblock %}
+{% endblock styles%}
 {% block content%}
+
 {% endblock%}
