made changes to home

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,7 +1,7 @@
 <a class="navbar-brand" href="/">
     <img
-      alt="My Blog"
-      src="https://icon2.kisspng.com/20171221/vde/halloween-witch-silhouette-png-clip-art-5a3b80347d8057.8929602415138488845141.jpg"
+      alt=""
+      src=""
       width="30"
       height="30"
       class="d-inline-block align-top"
@@ -16,10 +16,12 @@
         <div class="navbar navbar-inverse" role="navigation">
         <a class="navbar-brand" href="/"><b> IMEALS </b></a>
         </div>
-       
-            <ul class="nav navbar-nav font-weight-bold text-uppercase">
-                <li><a href="/">Home</a></li>
-                <li><a href="/">Menu</a></li>
-                <li><a href="/">Contact</a></li>
+        <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+          <ul class="nav navbar-nav font-weight-bold text-uppercase align-items-center">
+            <li><a href="/">Home</a></li>
+            <li><a href="/">Menu</a></li>
+            <li><a href="/">Contact</a></li>
+        </nav>
+           
             </div>
             </div></div>
