--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,60 +1,58 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macro%}
 
-<!-- Styles block
+<!-- Styles block-->
 
 {% block styles%} {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}" />
+<link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
+<link href="{{url_for('static',filename='css/business-casual.min.css')}}" rel="stylesheet">
 {% endblock %}
-
--->
 
 <!-- Content Block-->
 {% block content %}
-<div class="bgimage">
-  <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
-    <div class="col-md-12 p-lg-5 mx-auto my-5">
-      <h2 class="display-4 font-weight-normal text-white">WELCOME TO IMEALS</h2>
-      <!-- Carousel trial
-          <div
-        id="carouselExampleSlidesOnly"
-        class="carousel slide"
-        data-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              class="d-block w-100"
-              src="https://images.unsplash.com/photo-1486428128344-5413e434ad35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-              alt="First slide"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              src="https://images.unsplash.com/photo-1521913626209-0fbf68f4c4b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-              alt="Second slide"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              src="https://images.unsplash.com/photo-1518691340140-512e66ce957b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=746&q=80"
-              alt="Third slide"
-            />
-          </div>
+<h1 class="site-heading text-center text-white d-none d-lg-block">
+  <span class="site-heading-upper text-primary mb-3">Food Deliveries 4 You </span>
+  <span class="site-heading-lower">IMEALS ONLINE</span>
+</h1>
+<section class="page-section clearfix">
+  <div class="container">
+    <div class="intro">
+      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{{url_for('static', filename='img/intro.jpg')}}" alt="">
+      <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+        <h2 class="section-heading mb-4">
+          <span class="section-heading-upper">Fresh Deliveries</span>
+          <span class="section-heading-lower">Worth Every Coin</span>
+        </h2>
+        <p class="mb-3">When it comes to food orders and deliveries we got your back- we guarantee it!
+        </p>
+        <div class="intro-button mx-auto">
+          <a class="btn btn-primary btn-xl" href="#">Order Today!</a>
         </div>
-      </div> <!-->
-      <div id="buttons d-block mx-auto">
-        <a class="btn btn-outline-secondary text-white" href="/menu"
-          >View Menu</a
-        >&nbsp;&nbsp;
-
-        <a class="btn btn-outline-secondary text-white" href="/about"
-          >About us</a
-        >
       </div>
     </div>
   </div>
-</div>
+</section>
+
+<section class="page-section cta">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-9 mx-auto">
+        <div class="cta-inner text-center rounded">
+          <h2 class="section-heading mb-4">
+            <span class="section-heading-upper">Our Promise</span>
+            <span class="section-heading-lower">To You</span>
+          </h2>
+          <p class="mb-0">When you visit our site to start your order for the day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer class="footer text-faded text-center py-5">
+  <div class="container">
+    <p class="m-0 small">Copyright &copy; Moringa Cyphers 2020</p>
+  </div>
+</footer>
+
 {% endblock %}
