--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,22 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Marck+Script&display=swap");
 
 * {
-    font-family: 'Architects Daughter', cursive;
-
+  font-family: "Architects Daughter", cursive;
 }
 
-
-.section-title {
-    text-align: center;
-    margin-bottom: 75px;
+h2 {
+  display: block;
+  font-size: 1000em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-image: url('https://ludovicdumas.files.wordpress.com/2017/09/joseph-gonzalez-228027.jpg');
-    width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    overflow-y: scroll;
+  margin: 0;
+  padding: 0;
+  background-image: url("https://ludovicdumas.files.wordpress.com/2017/09/joseph-gonzalez-228027.jpg");
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  overflow-y: scroll;
 }
