--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,11 +11,14 @@
 
                  <a class="navbar-brand" href="/"><b> IMEALS </b></a>
                 </div>
-
+                <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+                   
+                  
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/">Menu</a></li>
                 <li><a href="/">Contact</a></li>
+            </nav>
               <ul class="nav navbar-nav navbar-right">
              {% if current_user.is_authenticated %}
              <li style="color:white;padding:15px;">{{current_user.username}}</li>
