--- a/app/templates/admin/set-menu.html
+++ b/app/templates/admin/set-menu.html
@@ -1,15 +1,15 @@
 {% extends 'admin/admin-base.html' %}
-
+{% import 'bootstrap/wtf.html' as wtf %}
 <!-- Styles block -->
 
 {% block styles%} {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/admin/menu.css')}}" />
-{% endblock styles%}
+{% endblock %}
 {% block content%}
 <div class="container">
-    {% if meals%}
-    <h1 class="text-center">MENU OF THE DAY</h1>
-    <table class="table table-striped w-auto">
+    <h1 class="text-center">Setting Menu</h1>
+    <!--Table-->
+<table class="table table-striped w-auto">
 
     <!--Table head-->
     <thead>
@@ -18,6 +18,7 @@
         <th>MEALS</th>
         <th>INGREDIENTS</th>
         <th>PRICE</th>
+        <th>Action</th>
       </tr>
     </thead>
     <!--Table head-->
@@ -30,22 +31,16 @@
         <td>{{meal.name}}</td>
         <td>{{meal.ingredients}}</td>
         <td>{{meal.cost}}</td>
+        <td><a href="{{url_for('.add_menu',meal_id=meal.id)}}"><button type="button" class="btn btn-primary">Add to Menu</button></a></td>
       </tr>
       {% endfor %}
-      
+      <tr>
+          <td><span></span></td>
+          <td><span></span></td>
+          <td><span></span></td>
+          <td><span></span></td>
+          <td><a href="{{url_for('.admin_menu',uname = uname)}}"><button type="button" class="btn btn-info text-center">DONE</button></a></td></tr>
     </tbody>
     </table>
-    {% endif%}
-    <table class="table table-striped w-auto">
-        <tbody>
-            <tr>
-                <td><span></span></td>
-                <td><span></span></td>
-                <td><span></span></td>
-                <td><span></span></td>
-                <td><a href="{{url_for('.set_menu',uname = uname)}}"><button type="button" class="btn btn-info text-center">SET UP MENU</button></a></td></tr>
-         </div>
-        </tbody>
-    </table>
-    
+</div>
 {% endblock%}
