add the views to menu

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,14 +1,10 @@
 {% extends 'base.html'%} {% import 'bootstrap/wtf.html' as wtf%} {% import 'macros.html' as macro%} {% block content %}
 <div class="branding">
 
-    <h1> <a href="index.html" style="color:wheat;">iMeal</a>
+    <h1 style="color:wheat;">iMeal</h1>
 
-        <div class="log">
-            <ul>
-                <li><a href="index.html" style="color: red">Logout</a></li>
-            </ul>
-        </div>
-    </h1>
+</div>
+
 
 
 </div>
@@ -24,7 +20,7 @@
 
             <button style="font-size: 11pt" class="tablink" onclick="openPage('breakfast', this, '#e8491d')">Breakfast</button>
             <button style="font-size: 11pt" class="tablink" onclick="openPage('lunch', this, '#e8491d')" id="defaultOpen">Lunch</button>
-            <button style="font-size: 11pt" class="tablink" onclick="openPage('dinner', this, '#e8491d')">Dinner</button> >>>>>>> bd6d053127e41d0695dfa8a504213ef6e71d7209
+            <button style="font-size: 11pt" class="tablink" onclick="openPage('dinner', this, '#e8491d')">Dinner</button>
         </div>
         <br>
         <br>
