--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% import 'macros.html' as macro%}
+{% extends 'base.html' %} {% import 'macros.html' as macro%}
 
 <!-- Styles block
 
@@ -12,10 +11,10 @@
 <!-- Content Block-->
 {% block content %}
 <div class="bgimage">
-  <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
-    <div class="col-md-12 p-lg-5 mx-auto my-5">
-      <h2 class="display-4 font-weight-normal text-white">WELCOME TO IMEALS</h2>
-      <!-- Carousel trial
+    <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
+        <div class="col-md-12 p-lg-5 mx-auto my-5">
+            <h2 class="display-4 font-weight-normal text-white">WELCOME TO IMEALS</h2>
+            <!-- Carousel trial
           <div
         id="carouselExampleSlidesOnly"
         class="carousel slide"
@@ -45,11 +44,10 @@
           </div>
         </div>
       </div> <!-->
-      <div id="buttons d-block mx-auto">
-        <a class="btn btn-outline-secondary text-white" href="/menu"
-          >View Menu</a
+            <div id="buttons d-block mx-auto">
+                <a class="btn btn-outline-secondary text-white" href="/menu">View Menu</a
         >&nbsp;&nbsp;
-
+    
         <a class="btn btn-outline-secondary text-white" href="/about"
           >About us</a
         >
