--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,37 +8,18 @@
 <html>
   <head>
     {% block styles%} {{ super() }}
-    <link
-      rel="stylesheet"
-      href="{{url_for('static',filename='css/styles.css')}}"
-    />
-    <link
-      href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}"
-      rel="stylesheet"
-    />
-    <link
-      href="{{url_for('static',filename='css/business-casual.min.css')}}"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="{{css/bootstrap.css">
+    <!-- Bootstrap-Core-CSS -->
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+    <!-- Style-CSS -->
+    <!-- font-awesome-icons -->
+    <link href="css/font-awesome.css" rel="stylesheet">
+    <!-- //font-awesome-icons -->
+    <!-- /Fonts -->
+    <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,600,700" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700" rel="stylesheet">
     {% endblock %} {% block head %} {{ super() }}
-    <!-- Bootstrap core JavaScript -->
-    <script src="static/vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Custom fonts for this template -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i"
-      rel="stylesheet"
-    />
-    <!--Fonts-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Courgette&family=Grenze+Gotisch:wght@800&family=New+Rocker&display=swap"
-      rel="stylesheet"
-    />
+    
     {% endblock %}
 
     <title>
