--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -5,30 +5,51 @@
 <!-- Navigations -->
 <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
   <div class="container">
-    <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+    <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Order With Imeal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
+    <div class="collapse navbar-collapse font-weight-bold" style="font-size: 40px;" id="navbarResponsive">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item px-lg-4">
-          <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+          <a class="nav-link text-uppercase text-expanded" href="/">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item active px-lg-4">
-          <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+          <a class="nav-link text-uppercase text-expanded" href="/">About</a>
         </li>
-        <li class="nav-item px-lg-4">
-          <a class="nav-link text-uppercase text-expanded" href="products.html">Menu</a>
+        <li class="nav-item active px-lg-4">
+          <a class="nav-link text-uppercase text-expanded" href="{{url_for('auth.register')}}">Register</a>
         </li>
-        <li class="nav-item px-lg-4">
-          <a class="nav-link text-uppercase text-expanded" href="store.html">Orders</a>
+        <li class="nav-item active px-lg-4">
+          <a class="nav-link text-uppercase text-expanded" href="{{url_for('auth.login')}}">Login</a>
         </li>
       </ul>
+       {% if current_user.is_authenticated %}
+        {% if current_user.usertype == "Customer" %}
+        <li class="nav-item px-lg-4">
+          <a class="nav-link text-uppercase text-expanded" href="">Menu</a>
+        </li>
+        <li class="nav-item px-lg-4">
+          <a class="nav-link text-uppercase text-expanded" href="/orders">Orders</a>
+        </li>
+        <li class="nav-item px-lg-4">
+          <a class="nav-link text-uppercase text-expanded" href="{{url_for('auth.logout')}}">Logout</a>
+        </li>
+      {% endif %}
+
+      {% if current_user.usertype == "Admin" %}
+      <li class="nav-item px-lg-4">
+        <a class="nav-link text-uppercase text-expanded" href="{{url_for('.admin')}}">Admin Dashboard</a>
+      </li>
+      {% else %}
+      <li class="nav-item px-lg-4">
+        <a class="nav-link text-uppercase text-expanded" href="{{url_for('auth.logout')}}">Logout</a>
+      </li>
+      {% endif %}
+      {% endif %}
     </div>
   </div>
 </nav>
-
-
-{% endblock %}
+{% endblock content %}
