--- a/app/templates/admin/orders.html
+++ b/app/templates/admin/orders.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content%}
 <div class="container">
-    <h1>ORDERS</h1>
+    <h1 class="text-center">ORDERS</h1>
     <!--Table-->
 <table class="table table-striped w-auto">
 
@@ -16,7 +16,7 @@
       <tr>
         <th>ORDER ID</th>
         <th>CUSTOMER</th>
-        <th>CUSTOMER CONTACT</th>
+        <th>EMAIL</th>
         <th>MEALS</th>
         <th>INGREDIENTS</th>
         <th>ORDER CHARGE</th>
