--- a/app/templates/admin/menu.html
+++ b/app/templates/admin/menu.html
@@ -36,16 +36,6 @@
     </tbody>
     </table>
     {% endif%}
-    <table class="table table-striped w-auto">
-        <tbody>
-            <tr>
-                <td><span></span></td>
-                <td><span></span></td>
-                <td><span></span></td>
-                <td><span></span></td>
-                <td><a href="{{url_for('.set_menu',uname = uname)}}"><button type="button" class="btn btn-info text-center">SET UP MENU</button></a></td></tr>
-         </div>
-        </tbody>
-    </table>
+    <p><a href="{{url_for('.set_menu',uname =current_user.username)}}"><button type="button" class='btn btn-info btn-block'>SET UP MENU</button></a></p>
     
 {% endblock%}
